--- a/WebApplication1/Jenkinsfile
+++ b/WebApplication1/Jenkinsfile
@@ -8,4 +8,7 @@ node{
     stage("capture"){
         archiveArtifacts artifacts: '**/Release/net7.0/**'
     }
+    stage("deploy"){
+        bat "Xcopy \\WebApplication1\\bin\\Release\\net7.0\\ c:\\inetpub\\wwwroot\\TestWebApp /E /H /C /I."
+    }
 }
