--- a/WebApplication1/Jenkinsfile
+++ b/WebApplication1/Jenkinsfile
@@ -6,7 +6,7 @@ node{
         bat "dotnet publish -r win-x64 --self-contained"
     }
     stage("capture"){
-        archiveArtifacts artifacts: '**/Release/net7.0/**'
+        archiveArtifacts artifacts: '**/bin/Release/net7.0/**'
     }
     stage("deploy"){
         bat 'net stop "w3svc"'
