--- a/WebApplication1/Jenkinsfile
+++ b/WebApplication1/Jenkinsfile
@@ -1,16 +1,19 @@
 node{
+    stage("restore"){
+        bat "dotnet restore"
+    }
     stage("build"){
         bat "dotnet build --configuration Release"
     }
     stage("publish"){
-        bat "dotnet publish -r win-x64 --self-contained"
+        bat "dotnet publish -c Release -r win-x64 --self-contained"
     }
     stage("capture"){
         archiveArtifacts artifacts: '**/bin/Release/net7.0/**'
     }
     stage("deploy"){
         bat 'net stop "w3svc"'
-        bat '"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe" -verb:sync -source:contentPath=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\pipe\\WebApplication1\\bin\\Release\\net7.0 -dest:contentPath=C:\\inetpub\\wwwroot\\TestWebApp -enableRule:DoNotDelete'
+        bat '"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe" -verb:sync -source:contentPath=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\pipe\\WebApplication1\\bin\\Release\\net7.0\\win-x64 -dest:contentPath=C:\\inetpub\\wwwroot\\TestWebApp'
         bat 'net start "w3svc"'
     }
 }
