--- a/WebApplication1/Jenkinsfile
+++ b/WebApplication1/Jenkinsfile
@@ -6,14 +6,14 @@ node{
         bat "dotnet build --configuration Release"
     }
     stage("publish"){
-        bat "dotnet publish -c Release -r win-x64 --self-contained"
+        bat "dotnet publish -c Release"
     }
     stage("capture"){
         archiveArtifacts artifacts: '**/bin/Release/net7.0/**'
     }
     stage("deploy"){
         bat 'net stop "w3svc"'
-        bat '"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe" -verb:sync -source:contentPath=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\pipe\\WebApplication1\\bin\\Release\\net7.0\\win-x64 -dest:contentPath=C:\\inetpub\\wwwroot\\TestWebApp'
+        bat '"C:\\Program Files\\IIS\\Microsoft Web Deploy V3\\msdeploy.exe" -verb:sync -source:contentPath=C:\\ProgramData\\Jenkins\\.jenkins\\workspace\\pipe\\WebApplication1\\bin\\Release\\net7.0\\publish -dest:contentPath=C:\\inetpub\\wwwroot\\TestWebApp'
         bat 'net start "w3svc"'
     }
 }
