--- a/WebApplication1/Jenkinsfile
+++ b/WebApplication1/Jenkinsfile
@@ -1,7 +1,7 @@
 node{
     stage('Checkout Stage') {
         steps {
-            url: 'https://github.com/giokavlashvili/WebApplication1.git', branch: 'master'
+            git url: 'https://github.com/giokavlashvili/WebApplication1.git', branch: 'master'
         }
     }
     stage("clean"){
